Created android build

--- a/app.json
+++ b/app.json
@@ -23,10 +23,13 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.macmartins.WeatherApp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "description": "React Native challenge for Wit Software.",
+    "githubUrl": "https://github.com/macmartins/WeatherApp"
   }
 }
